PostGIS 3.4.4dev
2024/xx/xx

* Bug Fixes *

  - Quote-protect output paths of pgtopo_export (Sandro Santilli)
  - #5785, [raster] ST_MapAlgebra segfaults when expression references
         a supernumerary rast argument (Dian M Fay)

* Enhancements *

  - #5782, Improve robustness of min distance calculation (Sandro Santilli)


PostGIS 3.4.3
2024/09/04

* Bug Fixes *

 - #5766, Always report invalid non-null MBR of universal face (Sandro Santilli)
 - #5709, Fix loose mbr in topology.face on ST_ChangeEdgeGeom (Sandro Santilli)
 - #5698, Fix robustness issue splitting line by vertex very close to endpoints,
          affecting topology population functions (Sandro Santilli)
 - #5649, ST_Value should return NULL on missing band (Paul Ramsey)
 - #5677, ST_Union(geom[]) should unary union single entry arrays (Paul Ramsey)
 - #5679, Remove spurious COMMIT statements from sfcgal script
          (Sandro Santilli, Loïc Bartoletti)
 - #5680, Fix populate_topology_layer with standard_conforming_strings
          set to off (Sandro Santilli)
 - #5589, ST_3DDistance error for shared first point (Paul Ramsey)
 - #5686, ST_NumInteriorRings and Triangle crash (Paul Ramsey)
 - #5666, Build reproducibility: timestamps
          in extension upgrade SQL scripts (James Addison)
 - #5671, Bug in ST_Area function with use_spheroid=false
          (Paul Ramsey, Regina Obe)
 - #5687, Don't rely on search_path to determine postgis schema
           Fix for PG17 security change (Regina Obe)
 - #5695, [address_standardizer_data_us] standardize_address
          incorrect handling of directionals (Regina Obe)
 - #5653, Do not simplify away points when linestring doubles back on
          itself (Paul Ramsey)
 - #5720, Correctly mangle special column names in shp2pgsql (Paul Ramsey)
 - #5734, Estimate geography extent more correctly (Paul Ramsey)
 - #5752, ST_ClosestPoint(geography) error (Paul Ramsey)
 - #5740, ST_DistanceSpheroid(geometry) incorrectly handles polygons (Paul Ramsey)