@@ -5,7 +5,9 @@ PostGIS 3.4.4dev
 
   - Quote-protect output paths of pgtopo_export (Sandro Santilli)
   - #5785, [raster] ST_MapAlgebra segfaults when expression references
-         a supernumerary rast argument (Dian M Fay)
+           a supernumerary rast argument (Dian M Fay)
+  - #5787, Check that ST_ChangeEdgeGeom doesn't change winding of rings
+           (Sandro Santilli)
 
 * Enhancements *
 
